welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:36: error: identifier expected but '(' found.
def (faireDiag) {
    ^